# vipercraft

./: .gitmodules  CMakeLists.txt
ViperCraft/: CMakeLists.txt
ViperCraft/include/Game/Block/: Chunk.h  Tile.h
ViperCraft/include/Game/Gui/: Gui.h  GuiPause.h  GuiScreen.h  UIManager.h
ViperCraft/include/Game/Player/: Player.h  PlayerController.h
ViperCraft/include/Game/World/: Sky.h  World.h
ViperCraft/include/Game/World/Feature/: OreFeature.h
ViperCraft/include/Input/: Input.h
ViperCraft/include/Physics/: Collider.h  Raycast.h
ViperCraft/include/ViperCraft/: ViperCraft.h
ViperCraft/source/: main.cpp
ViperCraft/source/Game/Block/: Chunk.cpp  Tile.cpp
ViperCraft/source/Game/Gui/: Gui.cpp  GuiPause.cpp  GuiScreen.cpp  UIManager.cpp
ViperCraft/source/Game/Player/: Player.cpp  PlayerController.cpp
ViperCraft/source/Game/World/: Sky.cpp  World.cpp
ViperCraft/source/Game/World/Feature/: OreFeature.cpp
ViperCraft/source/Input/: Input.cpp
ViperCraft/source/Physics/: Collider.cpp  Raycast.cpp
ViperCraft/source/ViperCraft/: ViperCraft.cpp
ViperGL/: CMakeLists.txt
ViperGL/include/Render/: Cam.h  Rect.h  Renderable.h  RenderableRect.h  RenderableVoxel.h
ViperGL/include/Shader/: Shader.h
ViperGL/include/Texture/: Texture.h
ViperGL/include/Vertex/: ElementBuffer.h  VertexObject.h
ViperGL/include/public/ViperGL/Camera/: Camera.h
ViperGL/include/public/ViperGL/Render/: Rect.h  RenderQueue.h  Renderable.h  UI.h  Voxel.h
ViperGL/include/public/ViperGL/Window/: Input.h  Window.h
ViperGL/source/Render/: Cam.cpp  Rect.cpp  RenderQueue.cpp  Renderable.cpp  RenderableRect.cpp  RenderableVoxel.cpp  UI.cpp  Voxel.cpp
ViperGL/source/Shader/: Shader.cpp
ViperGL/source/Texture/: Texture.cpp
ViperGL/source/Vertex/: ElementBuffer.cpp  VertexObject.cpp
ViperGL/source/Window/: Input.cpp  Window.cpp
shader/: main.frag  main.vert  ui.frag  ui.vert
